--- a/projet2.html
+++ b/projet2.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Restaurant sallè Élégance</title>
+    <title>Restaurant Salle Élégance</title>
 
+    <!-- Bootstrap + Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <style>
         .navbar-custom {
@@ -34,17 +35,18 @@
         }
 
         footer {
-            margin-top: 40px;
+            background-color: #dc3545;
         }
     </style>
 </head>
 
-<body>
+<body class="min-vh-100 d-flex flex-column"> <!-- Pour footer sticky -->
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images\logo.jpg" alt="logo" width="120" height="120" />
+                <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,14 +64,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-danger fw-bold" href="projet.html" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            explore les differents plats
+                            Explore les différents plats
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet2.html">Menu Après midi</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu Après-midi</a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
                         </ul>
                     </li>
@@ -81,32 +81,39 @@
         </div>
     </nav>
 
+    <!-- Contenu principal : Carousel -->
     <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <h1 class="text-center mt-4">Menu Après midi</h1>
+            <h1 class="text-center mt-4">Menu Après-midi</h1>
 
             <!-- Slide 1 -->
             <div class="carousel-item active">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <div class="card" style="width: 30rem;">
-                        <img src="pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
+                        <img src="images/pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
                             <h5 class="card-title">Riz mukayaz plat chinois</h5>
-                            <p class="card-text">Riz avec poisson et fruits de saison et tous les condiments orientaux 💶 Prix : 12,50 €.</p>
+                            <p class="card-text">
+                                Riz avec poisson et fruits de saison et tous les condiments orientaux. 💶 Prix : 12,50 €
+                            </p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="images\plat.jpg" class="card-img-top img-fluid" alt="menu2">
+                        <img src="images/plat.jpg" class="card-img-top img-fluid" alt="menu2">
                         <div class="card-body">
                             <h5 class="card-title">Filet de bœuf grillé sauce au vin rouge</h5>
-                            <p class="card-text">Un tendre filet de bœuf, Parfaitement grillée, servie avec une délicieuse sauce au vin rouge réduite, relevée d’une touche d’échalotes et de poivre noir concassé. Garniture possible de légumes de saison ou purée maison, selon le choix du chef. 🥩 Viande savoureuse, cuisson maîtrisée, sauce onctueuse. 💶 Prix : 22,50 €.</p>
+                            <p class="card-text">
+                                Tendre filet de bœuf grillé, sauce vin rouge, échalotes et poivre noir, avec légumes ou purée maison. 💶 Prix : 22,50 €
+                            </p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="images\img\img-5.jpg" class="card-img-top img-fluid" alt="menu3">
+                        <img src="images/img/img-5.jpg" class="card-img-top img-fluid" alt="menu3">
                         <div class="card-body">
-                            <h5 class="card-title">Rénoise Tuelleuse à la fraises</h5>
-                            <p class="card-text">Un dessert raffiné et gourmand composé d’une génoise aérienne, délicatement imbibée de sirop parfumé, garnie d’une Crème épicée, servie légère au mascarpone et parsemée de fraises fraîches. 🍓 💶 Prix : 7,50 €.</p>
+                            <h5 class="card-title">Rénoise Tuelleuse à la fraise</h5>
+                            <p class="card-text">
+                                Génoise aérienne au sirop, crème légère au mascarpone, fraises fraîches. 🍓 💶 Prix : 7,50 €
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -116,31 +123,37 @@
             <div class="carousel-item">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <div class="card" style="width: 30rem;">
-                        <img src="images\img\img-2.png" class="card-img-top img-fluid" alt="menu4">
+                        <img src="images/img/img-2.png" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
-                            <h5 class="card-title">Menu mixte pour Famille</h5>
-                            <p class="card-text">Base moelleuse, Sauce Tomate épicée, mozzarella fondue,Tranches de poivrons croustillants, et basilic frais et hamburger et frites 💶 Prix : 10,90 €.</p>
+                            <h5 class="card-title">Menu mixte pour famille</h5>
+                            <p class="card-text">
+                                Pizza, hamburger, frites, poivrons croustillants, basilic frais. 💶 Prix : 10,90 €
+                            </p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="images\riz.jpg" class="card-img-top img-fluid" alt="menu5">
+                        <img src="images/riz.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
                             <h5 class="card-title">Poulet Tikka Masala</h5>
-                            <p class="card-text">Un plat traditionnel indien avec morceaux de poulet marinés, mijotés dans une sauce tomate-crème épicée, servi avec riz basmati et naan. 🌿 💶 Prix : 16,90 €.</p>
+                            <p class="card-text">
+                                Poulet mijoté sauce tomate-crème épicée, riz basmati, naan. 🌿 💶 Prix : 16,90 €
+                            </p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="images\pasta.jpg" class="card-img-top img-fluid" alt="menu6">
+                        <img src="images/pasta.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
                             <h5 class="card-title">Spaghetti con ragù di carne</h5>
-                            <p class="card-text">Spaghetti al dente avec un ragù de bœuf mijoté aux herbes, champignons et sauce tomate saupoudré de parmesan. 🥄 💶 Prix : 14,90 €.</p>
+                            <p class="card-text">
+                                Spaghetti al dente, ragù de bœuf, champignons, sauce tomate, parmesan. 🥄 💶 Prix : 14,90 €
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Contrôles -->
+        <!-- Contrôles carousel -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
             <span class="visually-hidden">Précédent</span>
@@ -151,8 +164,8 @@
         </button>
     </div>
 
-    <!-- Footer -->
-    <footer class="p-3 bg-danger text-white text-center">
+    <!-- Footer fixé en bas -->
+    <footer class="p-3 text-white text-center mt-auto">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
             <i class="bi bi-facebook"></i>
@@ -163,6 +176,7 @@
         <br />
         2025 © Copyright
     </footer>
-</body>
 
+</body>
 </html>
+
