--- a/projet2.html
+++ b/projet2.html
@@ -2,21 +2,25 @@
 <html lang="fr">
 
 <head>
+    <!-- Configuration de base -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Restaurant Salle Élégance</title>
 
-    <!-- Bootstrap + Icons -->
+    <!-- Intégration de Bootstrap CSS et des icônes Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
+    <!-- Style CSS personnalisé -->
     <style>
+        /* Navbar personnalisée */
         .navbar-custom {
             background-color: white;
             padding: 15px;
         }
 
+        /* Bouton principal personnalisé */
         .btn-primary-custom {
             background-color: rgb(240, 48, 48);
             color: white;
@@ -25,34 +29,40 @@
             border: none;
         }
 
+        /* Image en haut de la carte */
         .card-img-top {
             height: 200px;
             object-fit: cover;
         }
 
+        /* Espace sous le carousel */
         .carousel-inner {
             margin-bottom: 200px;
         }
 
+        /* Style du footer */
         footer {
             background-color: #dc3545;
         }
     </style>
 </head>
 
-<body class="min-vh-100 d-flex flex-column"> <!-- Pour footer sticky -->
+<body class="min-vh-100 d-flex flex-column"> <!-- min-vh-100 + flex-column permet de coller le footer en bas -->
 
-    <!-- Navbar -->
+    <!-- Barre de navigation -->
     <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
         <div class="container-fluid">
+            <!-- Logo du restaurant -->
             <a class="navbar-brand" href="#">
                 <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
+            <!-- Bouton pour afficher/cacher le menu en version mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+            <!-- Liens du menu -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -74,6 +84,7 @@
                         </ul>
                     </li>
                 </ul>
+                <!-- Bouton avec numéro de téléphone -->
                 <form class="d-flex">
                     <button class="btn btn-primary-custom" type="button">+32 453 367 890 456</button>
                 </form>
@@ -81,7 +92,7 @@
         </div>
     </nav>
 
-    <!-- Contenu principal : Carousel -->
+    <!-- Section principale avec carousel de plats -->
     <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <h1 class="text-center mt-4">Menu Après-midi</h1>
@@ -89,6 +100,7 @@
             <!-- Slide 1 -->
             <div class="carousel-item active">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
+                    <!-- Carte plat 1 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
@@ -98,6 +110,7 @@
                             </p>
                         </div>
                     </div>
+                    <!-- Carte plat 2 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/plat.jpg" class="card-img-top img-fluid" alt="menu2">
                         <div class="card-body">
@@ -107,6 +120,7 @@
                             </p>
                         </div>
                     </div>
+                    <!-- Carte plat 3 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/img/img-5.jpg" class="card-img-top img-fluid" alt="menu3">
                         <div class="card-body">
@@ -122,6 +136,7 @@
             <!-- Slide 2 -->
             <div class="carousel-item">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
+                    <!-- Carte plat 4 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/img/img-2.png" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
@@ -131,6 +146,7 @@
                             </p>
                         </div>
                     </div>
+                    <!-- Carte plat 5 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/riz.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
@@ -140,6 +156,7 @@
                             </p>
                         </div>
                     </div>
+                    <!-- Carte plat 6 -->
                     <div class="card" style="width: 30rem;">
                         <img src="images/pasta.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
@@ -153,7 +170,7 @@
             </div>
         </div>
 
-        <!-- Contrôles carousel -->
+        <!-- Contrôles pour changer de slide -->
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
             <span class="visually-hidden">Précédent</span>
@@ -164,7 +181,7 @@
         </button>
     </div>
 
-    <!-- Footer fixé en bas -->
+    <!-- Pied de page -->
     <footer class="p-3 text-white text-center mt-auto">
         Suivez-nous sur les réseaux sociaux :
         <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
@@ -178,5 +195,6 @@
     </footer>
 
 </body>
+
 </html>
 
